# libuvc_server

./: CMakeLists.txt  Makefile  Readme.md
client/: imgrab.py
src/: main.cpp
